Fixed OpenStore tag on mobile views

--- a/www/less/theme.less
+++ b/www/less/theme.less
@@ -17,6 +17,8 @@ a {
   .openstore-tag {
     position: absolute;
     bottom: 0;
+    left: 0;
+    right: 0;
   }
 }
 
